--- a/money/Views/Accounts/Create.cshtml
+++ b/money/Views/Accounts/Create.cshtml
@@ -1,40 +1,37 @@
 ﻿@model CreateAccountViewModel
 
-@{
-    ViewBag.Title = "Create Account";
+@section title {
+    <title>Create Account</title>
 }
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col">
         <h1>Create Account</h1>
-        @using (Html.BeginForm())
-        {
+        <form method="post">
             <div class="form-group">
-                @Html.LabelFor(x => x.Name)
-                @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+                <label asp-for="Name">Name</label>
+                <input asp-for="Name" class="form-control" />
             </div>
             <div class="form-group">
-                @Html.LabelFor(x => x.Type)
-
-                <select asp-for="Type" asp-items="Html.GetEnumSelectList(typeof(money.Entities.AccountType))"></select>
-
-                @*@Html.EnumDropDownListFor(x => x.Type, "Please select...", new { @class = "form-control" })*@
+                <label asp-for="Type">Type</label>
+                <select asp-for="Type" asp-items="Html.GetEnumSelectList(typeof(money.Entities.AccountType))" class="form-control">
+                    <option value="">Please select...</option>
+                </select>
             </div>
             <div class="form-group">
-                @Html.LabelFor(x => x.StartingBalance)
-                @Html.TextBoxFor(x => x.StartingBalance, new { @class = "form-control" })
+                <label asp-for="StartingBalance">Starting balance</label>
+                <input asp-for="StartingBalance" class="form-control" />
             </div>
             <div class="form-group">
-                @Html.LabelFor(x => x.DisplayOrder)
-                @Html.TextBoxFor(x => x.DisplayOrder, new { @class = "form-control" })
+                <label asp-for="DisplayOrder">Display order</label>
+                <input asp-for="DisplayOrder" class="form-control" />
             </div>
             <div class="checkbox">
                 <label>
-                    @Html.CheckBoxFor(x => x.IncludeInNetWorth) Include balance in net worth
+                    <input asp-for="IncludeInNetWorth" /> Include balance in net worth
                 </label>
             </div>
-
             <button type="submit" class="btn btn-primary">Create</button>
-        }
+        </form>
     </div>
 </div>
