--- a/money/Views/Entries/Update.cshtml
+++ b/money/Views/Entries/Update.cshtml
@@ -1,52 +1,50 @@
 ﻿@model UpdateEntryViewModel
 
-@{
-    ViewBag.Title = "Update Entry";
+@section title {
+<title>Update Entry</title>
 }
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col">
         <h1>Update Entry</h1>
-        @using (Html.BeginForm())
-        {
-            <div class="form-group">
-                @Html.LabelFor(x => x.Amount)
-                <div class="row">
-                    <div class="col-xs-5">
-                        @Html.EditorFor(x => x.Amount)
-                    </div>
-                    <div class="col-xs-7">
-
-                    </div>
+        <form method="post">
+            <div class="row">
+                <div class="form-group col-sm-5">
+                    <label asp-for="Amount">Amount</label>
+                    <editor for="Amount" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-sm-7">
+                    <label asp-for="Date">Date</label>
+                    <editor for="Date" />
+                </div>
+                <div class="form-group-nolabel col-sm-5">
+                    <button class="btn btn-light btn-block btn-date-preset" data-date="@DateTime.Now.Date.AddDays(-1).ToString(" yyyy-MM-dd")">Yesterday</button>
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(x => x.Date)
-                <div class="row">
-                    <div class="col-xs-7">
-                        @Html.EditorFor(x => x.Date)
-                    </div>
-                    <div class="col-xs-5">
-                        <button class="btn btn-default btn-block btn-date-preset" data-date="@DateTime.Now.Date.AddDays(-1).ToString("yyyy-MM-dd")">Yesterday</button>
-                    </div>
-                </div>
+                <label asp-for="CategoryID">Category</label>
+                <select asp-for="CategoryID" asp-items="Model.Categories" class="form-control">
+                    <option value="">--</option>
+                </select>
             </div>
             <div class="form-group">
-                @Html.LabelFor(x => x.CategoryID)
-                @Html.DropDownListFor(x => x.CategoryID, Model.Categories, "--", new { @class = "form-control" })
+                <label asp-for="PartyID">Party</label>
+                <select asp-for="PartyID" asp-items="Model.Parties" class="form-control">
+                    <option value="">--</option>
+                </select>
             </div>
-            <div class="form-group">
-                @Html.LabelFor(x => x.PartyID)
-                @Html.DropDownListFor(x => x.PartyID, Model.Parties, "--", new { @class = "form-control" })
-            </div>
-
             <button type="submit" class="btn btn-primary">Update</button>
-        }
+        </form>
+    </div>
+</div>
 
-        @using (Html.BeginForm("Delete", "Entries"))
-        {
-            @Html.HiddenFor(x => x.ID)
+<div class="row">
+    <div class="col">
+        <form asp-action="Delete" method="post">
+            <input type="hidden" asp-for="ID" />
             <button type="submit" class="btn btn-danger">Delete</button>
-        }
+        </form>
     </div>
 </div>
