--- a/money/Views/MonthlyBudgets/Update.cshtml
+++ b/money/Views/MonthlyBudgets/Update.cshtml
@@ -1,36 +1,33 @@
 ﻿@model UpdateMonthlyBudgetViewModel
 
-@{
-    ViewBag.Title = "Update Monthly Budget";
+@section title {
+    <title>Update Monthly Budget</title>
 }
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col">
         <h1>Update Monthly Budget</h1>
-        @using (Html.BeginForm())
-        {
+        <form method="post">
             <div class="form-group">
-                @Html.LabelFor(x => x.StartDate)
-                @Html.EditorFor(x => x.StartDate)
+                <label asp-for="StartDate">Start budget on</label>
+                <editor for="StartDate" />
             </div>
-
             <div class="form-group">
-                @Html.LabelFor(x => x.EndDate)
-                @Html.EditorFor(x => x.EndDate)
+                <label asp-for="EndDate">End budget on</label>
+                <editor for="EndDate" />
             </div>
-
-            <div class="form-horizontal">
-                @Html.EditorFor(x => x.Categories)
-            </div>
-
-            @Html.HiddenFor(x => x.AccountID)
+            <editor for="Categories" />
+            <input type="hidden" asp-for="AccountID" />
             <button type="submit" class="btn btn-primary">Update</button>
-        }
+        </form>
+    </div>
+</div>
 
-        @using (Html.BeginForm("Delete", "MonthlyBudgets"))
-        {
-            @Html.HiddenFor(x => x.ID)
+<div class="row">
+    <div class="col">
+        <form asp-action="Delete" method="post">
+            <input type="hidden" asp-for="ID" />
             <button type="submit" class="btn btn-danger">Delete</button>
-        }
+        </form>
     </div>
 </div>
