--- a/money/Views/Shared/EditorTemplates/Decimal.cshtml
+++ b/money/Views/Shared/EditorTemplates/Decimal.cshtml
@@ -1,6 +1,9 @@
 ﻿@model decimal
 
 <div class="input-group">
-    <div class="input-group-addon">&pound;</div>
+    <div class="input-group-prepend">
+          <div class="input-group-text">&pound;</div>
+        </div>
+
     @Html.TextBox("", Model.ToString("0.00"), new { @class = "form-control", type = "number", step = "0.01", autocomplete = "off" })
 </div>
