--- a/money/Views/Users/Login.cshtml
+++ b/money/Views/Users/Login.cshtml
@@ -1,24 +1,22 @@
 ﻿@model LoginViewModel
 
-@{
-    ViewBag.Title = "Log In";
+@section title {
+    <title>Log In</title>
 }
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col">
         <h1>Log In</h1>
-        @using (Html.BeginForm())
-        {
+        <form method="post">
             <div class="form-group">
-                @Html.LabelFor(x => x.Email)
-                @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
+                <label asp-for="Email">Email Address</label>
+                <input asp-for="Email" class="form-control"/>
             </div>
             <div class="form-group">
-                @Html.LabelFor(x => x.Password)
-                @Html.PasswordFor(x => x.Password, new { @class = "form-control" })
+                <label asp-for="Password">Password</label>
+                <input asp-for="Password" class="form-control"/>
             </div>
-
             <button type="submit" class="btn btn-primary">Log In</button>
-        }
+        </form>
     </div>
 </div>
