Use new card class instead of well

--- a/money/Views/Home/_NetWorth.cshtml
+++ b/money/Views/Home/_NetWorth.cshtml
@@ -21,7 +21,7 @@
 
 <hr />
 
-<div class="well net-worth net-worth-balance-list">
+<div class="card net-worth net-worth-balance-list">
 
     @foreach (var accountGroup in Model.Accounts.GroupBy(a => a.IsIncludedInNetWorth))
     {
