Remove BOM from all source files
Some things won't parse package.json with BOM, so may as well be consistent...

--- a/money/Views/MonthlyBudgets/Create.cshtml
+++ b/money/Views/MonthlyBudgets/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CreateMonthlyBudgetViewModel
+@model CreateMonthlyBudgetViewModel
 
 @section title {
     <title>Create Monthly Budget</title>
