--- a/money/Views/MonthlyBudgets/Update.cshtml
+++ b/money/Views/MonthlyBudgets/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model UpdateMonthlyBudgetViewModel
+@model UpdateMonthlyBudgetViewModel
 
 @section title {
     <title>Update Monthly Budget</title>
