--- a/money/Views/Shared/EditorTemplates/MonthlyBudgetCategoryViewModel.cshtml
+++ b/money/Views/Shared/EditorTemplates/MonthlyBudgetCategoryViewModel.cshtml
@@ -1,4 +1,4 @@
-﻿@model MonthlyBudgetCategoryViewModel
+@model MonthlyBudgetCategoryViewModel
 
 @{ 
     var fieldID = Html.GenerateIdFromName(ViewData.TemplateInfo.GetFullHtmlFieldName(nameof(Model.CategoryID)));
