Dashboard now uses Flexbox for layout

--- a/money/Views/Accounts/Update.cshtml
+++ b/money/Views/Accounts/Update.cshtml
@@ -44,7 +44,7 @@
 
 <div class="row">
     <div class="col">
-        <form asp-action="Delete" method="post">
+        <form asp-action="Delete" method="post" class="delete-form">
             <input type="hidden" asp-for="ID" />
             <button type="submit" class="btn btn-danger">Delete</button>
         </form>
