--- a/money/Views/Shared/_Account.cshtml
+++ b/money/Views/Shared/_Account.cshtml
@@ -7,19 +7,17 @@
     var isCredit = hasBudget.ToString().ToLower();
 }
 
-<div class="row row-account">
-    <div class="col-sm-12">
-        <hr />
-    </div>
-    <div class="col-sm-6">
-        <h1>
-        <a asp-action="Index" asp-controller="Entries" asp-route-id="@Model.ID">@Model.Name</a></h1>
-    </div>
-    <div class="col-sm-4 text-right">
-        <span class="btn-height account-balance">@Model.CurrentBalance.ToString("0.00")</span>
-    </div>
-    <div class="col-sm-2 text-right">
-        <button data-accountid="@Model.ID" data-accountname="@Model.Name" @Html.Raw(hasBudget ? "data-iscredit=\"true\"" : "") data-remaining="@Model.CurrentBalance" class="btn btn-primary btn-add-entry"><i class="fa fa-plus"></i></button>
+<div class="row">
+    <div class="col d-flex align-items-center">
+        <div class="flex-grow-1">
+            <h2 class="account-name"><a asp-action="Index" asp-controller="Entries" asp-route-id="@Model.ID">@Model.Name</a></h2>
+        </div>
+        <div class="account-balance">
+            @Model.CurrentBalance.ToString("0.00")
+        </div>
+        <div>
+            <button data-accountid="@Model.ID" data-accountname="@Model.Name" @Html.Raw(hasBudget ? "data-iscredit=\"true\"" : "") data-remaining="@Model.CurrentBalance" class="btn btn-primary btn-add-entry"><i class="fa fa-plus"></i></button>
+        </div>
     </div>
 </div>
 
@@ -27,18 +25,18 @@
 {
     foreach (var category in Model.Categories)
     {
-        <div class="row row-budget">
-            <div class="col-sm-10">
-                <div class="progress">
-                    <span class="category-name">@category.Name</span>
-                    <span class="category-remaining">@((-category.Remaining).ToString("0.00"))</span>
+        <div class="row">
+            <div class="col d-flex align-items-stretch">
+                <div class="progress flex-grow-1 align-items-stretch">
+                    <div class="overlay d-flex align-items-center">
+                        <div class="flex-fill">@category.Name</div>
+                        <div class="flex-fill">@((-category.Remaining).ToString("0.00"))</div>
+                    </div>
                     <div class="progress-bar bg-@(category.Remaining <= 0 ? "success" : "danger") @(Model.UpdatedCategoryID == category.ID ? "updated" : "")" role="progressbar" aria-valuenow="@category.PercentageSpent" aria-valuemin="0" aria-valuemax="100" style="width: @(category.PercentageSpent > 100 ? 100 : category.PercentageSpent)%">
                         <span class="sr-only">@category.PercentageSpent%</span>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-2 text-right">
-                <button data-accountid="@Model.ID" data-accountname="@Model.Name" data-iscredit="false" data-categoryid="@category.ID" data-categoryname="@category.Name" data-remaining="@category.Remaining" class="btn btn-primary btn-add-entry"><i class="fa fa-minus"></i></button>
+                <button class="btn btn-primary btn-add-entry" data-accountid="@Model.ID" data-accountname="@Model.Name" data-iscredit="false" data-categoryid="@category.ID" data-categoryname="@category.Name" data-remaining="@category.Remaining"><i class="fa fa-minus"></i></button>
             </div>
         </div>
     }
