--- a/money/wwwroot/css/site.css
+++ b/money/wwwroot/css/site.css
@@ -2,63 +2,66 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.body-content {
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
 .form-group-nolabel {
     padding-top: 32px;
 }
 
-.row-account {
-    margin-top: 10px;
-    padding-top: 0;
-}
-
-.row-account hr {
-    margin-top: 0;
+.account {
+    padding-bottom: 10px;
     margin-bottom: 10px;
+    border-bottom: solid 1px #e0e0e0;
 }
 
-.row-account h1 {
-    margin: 0;
-    font-size: 14px;
+.account .row {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.account-type {
+    font-size: 18px;
     font-weight: bold;
+    padding-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    border-bottom: solid 1px #e0e0e0;
 }
 
-.row-budget {
-    margin-top: 5px;
-}
-
-.row-budget [class^="col-"]:first-child {
-    padding-right: 0;
-}
-
-.row-budget-lg {
-    font-size: 2em;
+.account-name {
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 0;
 }
 
 .account-balance {
     font-weight: bold;
+    padding-right: 34px;
 }
 
 .progress {
     position: relative;
-    margin-bottom: 0;
-    height: 34px;
+    font-size: 1rem;
+    height: auto;
+    margin-right: 20px;
 }
 
-.progress span {
-    line-height: 34px;
+.progress .overlay {
     position: absolute;
     top: 0;
-    left: 15px;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
-.category-name {
-    font-weight: bold;
+.progress .overlay div {
+    padding: 14px;
 }
 
-.category-remaining {
-    font-weight: bold;
-    left: auto;
-    right: 15px;
+.progress .overlay :last-child {
     text-align: right;
 }
 
@@ -71,67 +74,35 @@ body {
     background-color: #ff6a00;
 }
 
-.btn-height {
-    display: inline-block;
-    padding: 6px 0;
-    margin-bottom: 0;
-    font-size: 14px;
-    line-height: 1.42857143;
-    white-space: nowrap;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    -webkit-user-select: text;
-    -moz-user-select: text;
-    -ms-user-select: text;
-    user-select: text;
-    background-image: none;
-    border: 1px solid transparent;
-}
-
-.navbar-header .load-indicator {
-    float: left;
-    padding: 15px;
-    line-height: 20px;
-}
-
-.modal-footer .load-indicator {
-    float: left;
-    padding-left: 5px;
-}
-
-.load-indicator-hidden {
-    visibility: hidden;
-}
-
-.account-type-heading {
-    font-size: 18px;
-    font-weight: bold;
-}
-
 .dormant {
     background-color: #f3f9ff !important;
 }
 
-#net-worth {
-    margin-top: 15px;
+.delete-form {
+    padding-top: 30px;
 }
 
-#net-worth hr {
-    margin-top: 0;
+#net-worth h1 {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#net-worth .card {
+    background-color: #f8f8f8;
+    border-color: rgba(175, 175, 175, 0.125);
+}
+
+#net-worth .card-body {
+    padding-top: .5rem;
 }
 
 .net-worth-header {
-    font-size: 11px;
+    font-size: 12px;
     color: #969696;
     text-transform: uppercase;
     padding: 0 0 2px 0;
     font-weight: bold;
     margin: 12px 0 5px 0;
-}
-
-.well.net-worth {
-    padding: 0 15px 15px 15px;
 }
 
 .net-worth-total {
@@ -145,7 +116,6 @@ body {
 .net-worth-total-balance {
     font-weight: normal;
     opacity: 0.6;
-    padding-left: 20px;
     float: right;
 }
 
