--- a/money/wwwroot/css/site.scss
+++ b/money/wwwroot/css/site.scss
@@ -1,3 +1,5 @@
+@import "font";
+
 $horizontal-gutter: 10px;
 $horizontal-gutter-double: $horizontal-gutter * 2;
 $vertical-gutter: 10px;
@@ -7,7 +9,8 @@ $divider-border: solid 1px #e0e0e0;
 $progress-bar-padding: 14px;
 
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Public Sans', Arial, sans-serif;
+    font-weight: 500;
 }
 
 .body-content {
